Fix: align right sources last update text

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,7 +83,7 @@ img {
 }
 hr {
   margin-top: 20px;
-  margin-bottom: 2px;
+  margin-bottom: 20px;
   border: 0;
   border-top: 1px solid #eee;
 }
@@ -409,7 +409,7 @@ hr {
   background-color: #999;
   height: 1px;
   border: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 .text-center {
   text-align: center;
@@ -545,8 +545,8 @@ section {
   padding-bottom: 5rem;
 }
 section.profile {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 section.data-sources {
   background-color: #f7f7f7;
@@ -602,6 +602,7 @@ section.tabs h1 {
   font-size: 0.7rem;
   color: #808080;
   bottom: 0;
+  text-align: right;
 }
 .sources-icons {
   width: 7rem;
@@ -930,7 +931,6 @@ button.reset-filters {
 .description-data-name h3,
 .description-data-title h3 {
   font-size: 2rem;
-  margin-top: 0.5em;
 }
 .search-result-emph {
   color: #2900f5;
@@ -1063,7 +1063,8 @@ button.reset-filters {
 .js-foundation-date .cardItemData {
   padding-left: 5px;
 }
-.js-title-data {
+.js-title-data,
+.js-data {
   text-transform: uppercase;
 }
 .js-title-data {
@@ -1138,10 +1139,7 @@ button.reset-filters {
 }
 .breadcrumb {
   padding-top: 2rem;
-  margin-bottom: 0;
-}
-.breadcrumb h4 {
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 .if-address-org {
   margin-bottom: 2rem;
